name:                hopfield-networks
version:             0.1.0.0
description:         Implements discrete asynchronous binary Hopfield networks
synopsis:            Hopfield Networks in Haskell
homepage:            https://github.com/ajtulloch/hopfield-networks
license:             MIT
license-file:        LICENSE
author:              Andrew Tulloch
maintainer:          Andrew Tulloch <andrew+cabal@tullo.ch>
category:            Math
build-type:          Simple
cabal-version:       >=1.10
bug-reports:         https://github.com/ajtulloch/hopfield-networks/issues
source-repository head
  type:      git
  location:  https://github.com/ajtulloch/hopfield-networks.git

library
    exposed-modules: MachineLearning.Hopfield, MachineLearning.Util
    default-language:    Haskell2010
    build-depends:
        base >= 4 && < 5,
        vector,
        matrix,
        MonadRandom,
        split

Test-Suite hopfield_test
    type: exitcode-stdio-1.0
    x-uses-tf: true
    main-is: MachineLearning/HopfieldTest.hs
    default-language: Haskell2010
    GHC-Options:    -Wall
    build-depends:
        hopfield-networks,
        base >= 4 && < 5,
        QuickCheck,
        vector,
        matrix,
        MonadRandom,
        test-framework-quickcheck2,
        test-framework


executable hopfield_demonstration
    main-is: MachineLearning/HopfieldDemonstration.hs
    default-language: Haskell2010
    GHC-Options:    -Wall
    build-depends:
        hopfield-networks,
        base >= 4 && < 5,
        QuickCheck,
        vector,
        matrix,
        MonadRandom,
        split